create github pages

--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Gostou? Que tal ajudar a gente a crescer?</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">
-                    Ser banda independente é MUITO DIFÍCIL.&nbsp;<br>O que faz a gente continuar LUTANDO é o apoio que você dá ao seguir a banda nas plataformas.<br>Se você tiver 1 MINUTINHO , segue a gente apertando nesses botões aqui:<br><br><iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:008njo124fGjiafcrumiTm?si=8_lYzV2XSeibPPF8Zur3_A&amp;size=detail&amp;theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe></h3>
+                    Ser banda independente é MUITO DIFÍCIL.&nbsp;<br>O que faz a gente continuar LUTANDO é o apoio que você dá ao seguir a banda nas plataformas.<br>Se você tiver 1 MINUTINHO , segue a gente apertando nesses botões aqui:<br><br><iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:008njo124fGjiafcrumiTm?si=8_lYzV2XSeibPPF8Zur3_A&amp;size=detail&amp;theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe><script src="https://apis.google.com/js/platform.js"></script>
+
+<div class="g-ytsubscribe" data-channelid="UCSvIbkRHKd4szCvhxex0coA" data-layout="full" data-count="default"></div></h3>
                 
             </div>
         </div>
