create github pages

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     A Lady Newton foi fundada por 4 engenheiros, de forma despretensiosa ensaiando as nossas músicas favoritas. A banda foi evoluindo ao longo dos anos, primeiro tocando em aniversários e depois em bares cada vez mais cheios.<br><br>Mas ainda faltava algo...<br><br>Faltava criar o som da Lady Newton, dar voz ao que a gente sente e unir pessoas que compartilhem desse sentimento.<br></p>
             </div>
             <div class="col-lg-6 img-col">
-                <img src="assets/images/dsc01240-cpia.png" alt="" title="">
+                <img src="file:///C:/Users/Cliente/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-01-27_141809/assets/images/DSC01240.JPG" alt="" title="">
                 <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-primary display-4" href="conhecaladynewton.html" target="_blank"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>CONHEÇA A BANDA</a></div>
             </div>
         </div>
