--- a/newtonlandia.html
+++ b/newtonlandia.html
@@ -107,7 +107,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </section>
 
-<div id="custom-html-e2"><iframe name="Newtonlandia" width="100%" height="800px" scrolling="no" frameborder="0" src="https://pixworld.io/newtonlandia2"></iframe></div>
+<div id="custom-html-e2"><div>
+<iframe name="Newtonlandia" width="100%" height="1920px" scrolling="yes" frameborder="0" src="https://pixworld.io/newtonlandia2"></iframe>
+</div></div>
 
 <section class="mbr-section article content1 cid-svNtVq2aBh" id="content1-e4">
     
