--- a/newtonlandia.html
+++ b/newtonlandia.html
@@ -93,7 +93,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
   <div id="custom-html-e2">
-<iframe name="Newtonlandia" width="100%" height="100%" scrolling="yes" frameborder="0" src="https://pixworld.io/newtonlandia2"></iframe>
+<iframe name="Newtonlandia" width="100%" height="850px" scrolling="yes" frameborder="0" src="https://pixworld.io/newtonlandia2"></iframe>
 </div>
 
 <section class="mbr-section article content1 cid-svNtVq2aBh" id="content1-e4">
