create github pages

--- a/ouvir.html
+++ b/ouvir.html
@@ -48,7 +48,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <!----  TUDO EM CIMA É FIREBASE -->
-
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  var OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "8b211386-0bb6-488c-9a5d-5758675c7145",
+    });
+  });
+</script>
 
 
 
@@ -143,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/DSC01325.jpg" alt="" title="">
+            <img src="assets/images/dsc01325-1.jpg" alt="" title="">
             
         </div>
     </figure>
@@ -173,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Esse é o nosso último single lançado! Um indie rock cheio de atitude e com uma letra que te faz reviver uma despedida amorosa!&nbsp;<br><br>Gostou? Aproveita para continuar sua jornada e conheça melhor a banda!</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-black display-4" href="index.html#content10-e0">Ver o resto do site</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#content10-e0">Ver o resto do site</a></div>
             </div>
         </div>
     </div>
