create github pages

--- a/ouvir.html
+++ b/ouvir.html
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Esse é o nosso último single lançado! Um indie rock cheio de atitude e com uma letra que te faz reviver uma despedida amorosa!&nbsp;<br><br>Gostou? Aproveita para continuar sua jornada e conheça melhor a banda!</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#content10-e0">Ver o resto do site</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#header2-1">Ver o resto do site</a></div>
             </div>
         </div>
     </div>
