--- a/ouvir.html
+++ b/ouvir.html
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/dsc01325-1.jpg" alt="" title="">
+            <img src="assets/images/DSC01325.jpg" alt="Lady Newton" title="Banda">
             
         </div>
     </figure>
