--- a/index.html
+++ b/index.html
@@ -350,7 +350,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
                 <div class="modal-body">
-                    <p class="mbr-text mbr-fonts-style display-7">Não fecha esse POP-UP!&nbsp;<br>Faz o pré save pra ajudar a gente, preparamos uma SURPRESINHA pra quem salvar a música!<br><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">Ao fazer o pré save você nos ajuda a BOMBAR no Spotify!
+<br>Além disso, preparamos uma página SUPER SECRETA com um gostinho do que está por vir! &lt;3
+<br>
+<br>Só digo uma coisa: Essa música tá IRADA<br><br></p>
 
                     <div>
 <iframe src="https://show.co/social-unlock/5DRsyVl10ZHsuOwX8AhYav/widget" width="100%" height="300" frameborder="0"></iframe>
