create github pages

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
-<div class="modal mbr-popup cid-sJb3MUrQXB fade" tabindex="-1" role="dialog" data-on-timer-delay="1" data-overlay-opacity="0.8" data-overlay-color="#000000" id="mbr-popup-et" aria-hidden="true">
+<div class="modal mbr-popup cid-sJb3MUrQXB fade" tabindex="-1" role="dialog" data-overlay-opacity="0.8" data-overlay-color="#000000" id="mbr-popup-et" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
@@ -378,7 +378,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
   <script src="assets/popup-plugin/script.js"></script>
-  <script src="assets/popup-ontimer-plugin/script.js"></script>
   <script src="assets/popup-overlay-plugin/script.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
