--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <!-- Hotjar Tracking Code for www.ladynewton.com -->
+  <meta name="facebook-domain-verification" content="fwmg9gcgma5zbxzlqqax1qh5tt88vc" />
+
+<!-- Hotjar Tracking Code for www.ladynewton.com -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
